--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
   "name": "xmail",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "https://app.eraser.io/workspace/nSEOj11Tl3psoU3AMwbH",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "novel": "^0.1.17",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "express": "^4.18.2"
   }
 }
